@@ -66,7 +66,7 @@ static gboolean   g_file_input_stream_seekable_truncate      (GSeekable         
 							      GCancellable         *cancellable,
 							      GError              **error);
 static void       g_file_input_stream_real_query_info_async  (GFileInputStream     *stream,
-							      char                 *attributes,
+							      const char           *attributes,
 							      int                   io_priority,
 							      GCancellable         *cancellable,
 							      GAsyncReadyCallback   callback,
@@ -129,7 +129,7 @@ g_file_input_stream_init (GFileInputStream *stream)
  **/
 GFileInfo *
 g_file_input_stream_query_info (GFileInputStream  *stream,
-                                char              *attributes,
+                                const char        *attributes,
                                 GCancellable      *cancellable,
                                 GError           **error)
 {
@@ -202,7 +202,7 @@ async_ready_callback_wrapper (GObject      *source_object,
  **/
 void
 g_file_input_stream_query_info_async (GFileInputStream    *stream,
-                                      char                *attributes,
+                                      const char          *attributes,
                                       int                  io_priority,
                                       GCancellable        *cancellable,
                                       GAsyncReadyCallback  callback,
@@ -434,7 +434,7 @@ query_info_async_thread (GSimpleAsyncResult *res,
 
 static void
 g_file_input_stream_real_query_info_async (GFileInputStream    *stream,
-                                           char                *attributes,
+                                           const char          *attributes,
                                            int                  io_priority,
                                            GCancellable        *cancellable,
                                            GAsyncReadyCallback  callback,
